# did

./: main.py  pyproject.toml
pybadge/: issuer_prikey.json  issuer_pubkey.json  pybadge.py
pybadge/pyopenbadges/: __init__.py
pybadge/pyopenbadges/crypto/: __init__.py  keys.py  signing.py  verification.py
pybadge/pyopenbadges/models/: __init__.py  achievement.py  credential.py  endorsement.py  profile.py
pybadge/pyopenbadges/utils/: __init__.py  serializers.py  validators.py
verifycreds/: get-acct-info.py
