[project]
name = "xrplfc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "flask==3.0.3",
    "jwt>=1.4.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "xrpl-py==4.0.0",
]
